# zsl-classifier

./: .gitignore  LICENSE  README.md  pyproject.toml
src/zsl/: __main__.py
src/zsl/clustering/: __init__.py  embedded_clustering.py  llm_clustering.py
src/zsl/image/: __init__.py  feature_extraction.py  process_classes.py  train.py
src/zsl/text/: __init__.py
src/zsl/utils/: __init__.py  files.py  log.py
