[tool.poetry]
name = "zsl"
version = "0.1.0"
description = "A zero-shot learning classifier prototype"
authors = ["Noah Scharrenberg <nscharrenberg@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
typer = "^0.9.0"
emoji = "^2.2.0"
transformers = "4.22.1"
datasets = "2.4.0"
torch = "1.12.1"
scikit-learn = "^1.2.2"
numpy = "^1.24.3"
pandas = "^2.0.1"
sentencepiece = "^0.1.99"
protobuf = "3.20.0"
gensim = "^4.3.1"
sentence-transformers = "^2.2.2"

[tool.poetry.scripts]
zsl = "zsl.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
